fixed footer covering content

--- a/dad_jokes_client/src/components/Footer/Footer.css
+++ b/dad_jokes_client/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     position: fixed;
     bottom: 0;
-    height: 5vh; 
+    height: 5%; 
     width: 100%;  
     border-top: 1px solid whitesmoke;   
     display: flex;
