--- a/dad_jokes_client/src/components/Home/Home.css
+++ b/dad_jokes_client/src/components/Home/Home.css
@@ -1,3 +1,8 @@
+.main-page-container {
+    margin-bottom: 5%;
+}
+
+
 .button-link {
     border: 2px solid whitesmoke;
     border-radius: 12px;
