--- a/dad_jokes_client/src/components/JokesPage/JokePage.css
+++ b/dad_jokes_client/src/components/JokesPage/JokePage.css
@@ -1,3 +1,8 @@
+.main-joke-container {
+    margin-bottom: 5%;
+}
+
+
 .card-holder {
     display: flex;
     flex-direction: row;
